-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Cluster Scalability
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
The skipMoveCollectionThreshold field is ignored. This may mislead developers into thinking they can use it to tune individual test suites.
The field was originally introduced to distribute balancer activity between chunk migrations and moveCollection operations, but at some point it was replaced by a hardcoded 0.5% probability.
A bit of context
When the balancerShouldReturnRandomMigrations failpoint is enabled, the balancer first selects a collection to move with a hardcoded 0.5% probability, and then it selects a chunk migration only if enough shards are still available. Note that, in clusters with fewer than four shards, the balancer would always move unsharded collections and never migrates chunks without the 0.5% probability.
Goal
The goal of this task is to follow one of these options:
- Use skipMoveCollectionThreshold to configure the probability of moving an unsharded collection during each balancer round.
- Remove all references to skipMoveCollectionThreshold to avoid confusion and leave the hardcoded 0.5% probability.
- related to
-
SERVER-134571 Avoid slow removeShard in *_with_balancer_and_config_transitions_and_add_remove_shard
-
- Closed
-