SERVER-133663: Honor skipMoveCollectionThreshold failpoint field (#61616)

Co-authored-by: mongodb-sage-bot[bot] <247496174+mongodb-sage-bot[bot]@users.noreply.github.com>
Co-authored-by: Abdul Qadeer <abdul.qadeer@mongodb.com>
GitOrigin-RevId: 396bab0c4fcf8f47980abd11aa35a23e28678f12